--- a/src/xsgrep/CMakeLists.txt
+++ b/src/xsgrep/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(tasks)
+add_library(libgrep grep.cpp)
+target_link_libraries(libgrep PUBLIC GrepTasks)
 
 add_executable(xs main.cpp)
-target_link_libraries(xs PUBLIC GrepTasks boost_program_options)
+target_link_libraries(xs PUBLIC libgrep boost_program_options)
