--- a/.github/workflows/exe-test.yml
+++ b/.github/workflows/exe-test.yml
@@ -28,6 +28,12 @@ jobs:
     - name: git submodules
       run: git submodule update --init --recursive
 
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DRE2_BUILD_TESTING=off -DXS_EXE_TESTS=ON
+
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
     - name: Test
       working-directory: ${{github.workspace}}/build
-      run: make test
+      run: python3 testsuit/cmdtest/test_xsgrep.py
