search directories recursively

--- a/src/xsgrep/tasks/CMakeLists.txt
+++ b/src/xsgrep/tasks/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(GrepTasks GrepOutput.cpp GrepSearcher.cpp)
+add_library(GrepTasks GrepResult.cpp GrepSearcher.cpp)
 target_link_libraries(GrepTasks PUBLIC xsearch)
